[tool.poetry]
name = "image_to_pdf"
version = "1.0"
description = "A Python package for converting images to PDF files."
authors = ["Jeffery Fang <Jefferyfang324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"

[tool.poetry.scripts]
image_to_pdf = "image_to_pdf.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
